@@ -100,6 +100,7 @@ RangeArray netlist::RangeArray::const_copy(const RangeArray& maxRange) const {
                                            Range(0) : maxRange.front()
                                            );
   rv.const_reduced = const_reduced;
+  rv.width = width;
   return rv;
 }
 
@@ -109,6 +110,7 @@ RangeArray netlist::RangeArray::deep_object_copy() const {
       rv.child.push_back(shared_ptr<Range>(m->deep_copy()));
     });
   rv.const_reduced = const_reduced;
+  rv.width = width;
   return rv;
 }
 
@@ -197,6 +199,7 @@ RangeArray* netlist::RangeArray::deep_copy() const {
       rv->child.push_back(shared_ptr<Range>(m->deep_copy()));
     });
   rv->const_reduced = const_reduced;
+  rv->width = width;
   return rv;
 }
 
@@ -212,8 +215,13 @@ bool netlist::RangeArray::elaborate(elab_result_t &result, const ctype_t mctype,
   return RangeArrayCommon::elaborate(result, mctype, fp);
 }
 
-bool netlist::operator>= (const RangeArray& lhs, const RangeArray& rhs) {
-  RangeArray tmp = lhs & rhs;
-  return tmp == rhs;
+unsigned int netlist::RangeArray::get_width() {
+  if(width) return width;
+  width = RangeArrayCommon::get_width();
+  return width;
 }
-
+  
+void netlist::Range::set_width(const unsigned int& w) {
+  assert(get_width() >= w);
+  RangeArrayCommon::set_width(w);
+}
